# GameBaseBox

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GB64_Modern_Frontend_Requirements.md  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.5.1.md  RELEASE_NOTES_0.5.2.md  RELEASE_NOTES_0.5.3.md  RELEASE_NOTES_0.5.4.md  RELEASE_NOTES_0.6.0.md  check_db.js  eslint.config.mjs  fix_view.js  next.config.ts  package-lock.json  package.json  platform-manifest.json  playwright.config.ts  tauri-build.bat  tauri-clean.bat  tauri-dev-debug.bat  tauri-dev-debug.sh  tauri-dev.bat  tauri-dev.sh  vitest.config.mts
.beads/: issues.jsonl  metadata.json
.specify/: feature.json
docs/: index.html  ios-feasibility-plan.md  robots.txt  sitemap.xml
e2e/: extras.spec.ts  home.spec.ts  platform-import.spec.ts  platform-launch-settings.spec.ts  platform-selection.spec.ts  search.spec.ts  settings.spec.ts  test-helpers.ts
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  models.rs  platform_manifest.rs  security.rs
src-tauri/src/commands/: emulator.rs  files.rs  mod.rs  platforms.rs  setup.rs  system.rs  video.rs
src-tauri/src/commands/db/: games.rs  mod.rs  querying.rs  secure_settings.rs  tests.rs
src-tauri/src/commands/setup/: tests.rs
(+200 files in other folders)
